--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>Zomato</title>
   </head>
-  <body>
+  <body style="background-color: rgb(228, 242, 242);">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
